feat(storage): establish v5 repository storage roots